Initial build, pending content. Dark mode and nav bar almost ready

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,31 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+::selection {
+  background-color: #47a3f3;
+  color: #fefefe;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+html {
+  min-width: 360px;
+  scroll-behavior: smooth;
 }
 
-* {
-  box-sizing: border-box;
+#__next {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.sticky-nav {
+  position: sticky;
+  z-index: 10;
+  top: 0;
+  backdrop-filter: saturate(180%) blur(20px);
+  transition: background-color 0.1 ease-in-out;
+}
+
+.animation:active {
+  transition: all 0.5s linear;
 }
