adding main page base structure, nav and footer in layout set. new image and font

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,10 @@ html {
   min-height: 100vh;
 }
 
+.logo {
+  font-family: "Nunito Sans", sans-serif;
+}
+
 .sticky-nav {
   position: sticky;
   z-index: 10;
